# AnimatedWebp

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BitmapDecoderJNI.cpp  Color.h  FrameSequence.cpp  FrameSequence.h  FrameSequenceJNI.cpp  FrameSequenceJNI.h  FrameSequence_gif.cpp  FrameSequence_gif.h  FrameSequence_webp.cpp  FrameSequence_webp.h  JNIHelpers.cpp  JNIHelpers.h  Registry.cpp  Stream.cpp  Stream.h  config.h
app/src/main/cpp/utils/: log.h  math.h
app/src/main/java/com/show/animated/: FrameSequence.java  FrameSequenceDrawable.java  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
